--- a/system_repair/system_repair.html
+++ b/system_repair/system_repair.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header-wrap">
             <div class="header-bg">
-                <h1><a href="#" class="text-decoration-none text-light">大勱克<br>系統維修中</a></h1>
+                <h1><a href="#" class="text-decoration-none text-light">大勱客<br>系統維修中</a></h1>
             </div>
         </div>
     </header>
